--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600');
- :root {
+:root {
+    font-family: 'Poppins', sans-serif;
     --background: rgb(0, 77, 153);
 }
 
@@ -135,7 +135,8 @@ nav a:hover {
         grid-column: 2 / 3;
     }
     nav {
-        // all: unset; /* this causes issues with Edge, since it's unsupported */
+        all: unset;
+        /* this causes issues with Edge, since it's unsupported */
         /* the following lines are not from my video, but add Edge support */
         position: relative;
         text-align: left;
@@ -188,13 +189,10 @@ article {
 
 footer {
     width: 100%;
-    height: 20vh;
+    height: 100%;
     background-color: rgb(1, 71, 141);
     text-align: center;
     color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-    font-weight: bold;
 }
 
 .center {
@@ -250,4 +248,57 @@ footer {
     .footer {
         order: 4;
     }
+}
+
+.flex-grid {
+    display: flex;
+}
+
+.col {
+    flex: 1;
+}
+
+@media (max-width: 400px) {
+    .flex-grid {
+        display: block;
+    }
+}
+
+a {
+    text-decoration: none;
+}
+
+
+/* footer */
+
+footer a {
+    color: white;
+}
+
+footer a:hover {
+    color: rgb(196, 196, 196);
+}
+
+.footer-left {
+    float: left;
+    width: 25%;
+    padding: 20px;
+}
+
+.footer-mid-left {
+    width: 25%;
+    float: left;
+    padding: 20px;
+}
+
+.footer-mid-right {
+    float: left;
+    width: 25%;
+    padding: 20px;
+}
+
+.footer-right {
+    float: right;
+    width: 25%;
+    padding: 20px;
 }
