--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ body {
         content: '';
         display: block;
         height: 3px;
-        background: rgb(245, 177, 177);
+        background: rgb(255, 255, 255);
         position: absolute;
         bottom: -0.20em;
         left: 0;
@@ -190,4 +190,24 @@ footer a:hover {
 
 html {
     scroll-behavior: smooth;
+}
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: rgb(2, 29, 56);
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+
+#myBtn:hover {
+    background-color: #555;
 }
