--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,6 @@ footer {
 .wrapper {
     display: flex;
     flex-flow: row wrap;
-    font-weight: bold;
-    text-align: center;
-    padding-top: 90px;
 }
 
 .wrapper>* {
@@ -149,45 +146,6 @@ a {
     text-decoration: none;
 }
 
-
-/* footer */
-
-footer a {
-    color: white;
-}
-
-footer a:hover {
-    color: rgb(196, 196, 196);
-}
-
-.footer-left {
-    float: left;
-    width: 25%;
-    padding: 20px;
-}
-
-.footer-mid-left table {
-    width: 100%;
-}
-
-.footer-mid-left {
-    width: 25%;
-    float: left;
-    padding: 20px;
-}
-
-.footer-mid-right {
-    float: left;
-    width: 25%;
-    padding: 20px;
-}
-
-.footer-right {
-    float: right;
-    width: 25%;
-    padding: 20px;
-}
-
 html {
     scroll-behavior: smooth;
 }
@@ -198,16 +156,20 @@ html {
     bottom: 20px;
     right: 30px;
     z-index: 99;
-    font-size: 18px;
+    font-size: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border: none;
     outline: none;
-    background-color: rgb(2, 29, 56);
+    background-color: rgb(0, 77, 153);
     color: white;
     cursor: pointer;
-    padding: 15px;
     border-radius: 4px;
+    border: 0.1em solid #000000;
 }
 
 #myBtn:hover {
-    background-color: #555;
+    background-color: rgb(37, 37, 37);
 }
