--- a/css/style2.css
+++ b/css/style2.css
@@ -50,7 +50,7 @@
 }
 
 #main {
-    margin-bottom: 500px;
+    margin-bottom: 650px;
 }
 
 
@@ -160,10 +160,12 @@
 /* SERVICES */
 
 #services {
-    background-color: lightblue;
+    background-color: rgb(122, 155, 255);
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 #services h2 {
@@ -180,6 +182,10 @@
     list-style-position: inside;
 }
 
+.services-bot {
+    margin-bottom: 60px;
+}
+
 
 /* HOURS */
 
@@ -187,22 +193,65 @@
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    background-color: gray;
+    padding-bottom: 100px;
+    padding-top: 60px;
 }
 
 #hrs {
-    font-size: 30px;
+    font-size: 50px;
+    text-align: center;
+}
+
+
+/* Follow */
+
+#follow {
+    background-color: rgb(26, 24, 24);
+    text-align: center;
+    padding-bottom: 60px;
+}
+
+#follow h2 {
+    color: white;
+    font-size: 50px;
+}
+
+#follow a {
+    color: rgb(255, 255, 255);
+}
+
+#follow a :hover {
+    color: rgb(185, 174, 174);
 }
 
 
 /* CONTACT */
 
-#contact {}
+#contact {
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+#contact h2 {
+    text-align: center;
+    font-size: 50px;
+}
+
+
+/* Map */
+
+#map {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
 
 
 /* footer */
 
 .footer {
-    padding: 20px;
+    padding: 30px;
 }
 
 .float-container {
@@ -218,4 +267,9 @@
     padding: 20px;
     border: 2px solid rgb(255, 255, 255);
     text-align: center;
+}
+
+.float-address {
+    align-content: center;
+    height: 50%;
 }
