--- a/css/style2.css
+++ b/css/style2.css
@@ -198,6 +198,11 @@
     padding-top: 60px;
 }
 
+#hours table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #hrs {
     font-size: 50px;
     text-align: center;
