--- a/css/style2.css
+++ b/css/style2.css
@@ -3,6 +3,7 @@
 .hero-image {
     background-image: linear-gradient(rgba(255, 255, 255, 0.068), rgba(0, 0, 0, 0.151)), url("../imgs/bg.jpg");
     height: 100%;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -50,16 +51,17 @@
 }
 
 #main {
-    margin-bottom: 650px;
+    margin-bottom: 800px;
 }
 
 
 /* ABOUT */
 
 #about {
-    background-image: url(../imgs/bg3.jpg);
+    background-color: rgb(218, 228, 255);
     margin: auto;
-    max-width: 1000px;
+    max-width: 90%;
+    height: 100%;
     justify-content: center;
     -webkit-box-shadow: 0 10px 6px -6px rgba(119, 119, 119, 0.616);
     -moz-box-shadow: 0 10px 6px -6px rgba(119, 119, 119, 0.616);
@@ -107,7 +109,7 @@
 }
 
 .brands {
-    font-size: 50px;
+    font-size: 6.925207756232687vh;
     margin-top: 75px;
     text-align: center;
 }
@@ -115,17 +117,17 @@
 .grid-container {
     justify-content: center;
     display: grid;
-    grid-template-columns: 200px 200px 200px;
+    grid-template-columns: 21vh 21vh 21vh;
 }
 
 .grid-item {
-    font-size: 40px;
+    font-size: 5.7vh;
     text-align: center;
 }
 
 .grid-item img {
-    width: 175px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
 }
 
 #btn {
@@ -181,7 +183,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; */
-    background-color: rgb(231, 235, 240);
+    background-color: rgb(242, 245, 248);
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -191,20 +193,24 @@
 
 #services h2 {
     text-align: center;
-    font-size: 50px;
+    font-size: 6.925207756232687vh;
     margin-bottom: -20px;
 }
 
 #services h3 {
-    font-size: 30px;
+    font-size: 4.1551246537396125vh;
+    padding-left: 2vh;
 }
 
 #services ul {
+    font-size: 2.5vh;
     list-style-position: inside;
 }
 
 .services-bot {
     margin-bottom: 60px;
+    font-size: 2.5vh;
+    padding-left: 2vh;
 }
 
 #services-col {
@@ -243,18 +249,48 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    width: 100%;
     padding-top: 60px;
     padding-bottom: 100px;
 }
 
+#img {}
+
+#ins-img {
+    width: 50%;
+    height: 75%;
+    float: left;
+}
+
+#vid {
+    width: 50%;
+    margin-left: auto;
+}
+
+#video-wrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    height: 0;
+}
+
+#video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 #insurance h2 {
-    font-size: 50px;
+    font-size: 6.925207756232687vh;
 }
 
 
 /* Follow */
 
 #follow {
+    padding-top: 6.925207756232687vh;
     background-color: rgb(26, 24, 24);
     text-align: center;
     padding-bottom: 60px;
@@ -262,11 +298,12 @@
 
 #follow h2 {
     color: white;
-    font-size: 50px;
+    font-size: 6.925207756232687vh;
+    margin-bottom: 5px;
 }
 
 #follow a {
-    font-size: 20px;
+    font-size: 2.770083102493075vh;
     padding: 5px;
     color: rgb(255, 255, 255);
 }
@@ -285,47 +322,40 @@
 #reviews {
     background-color: rgb(224, 224, 224);
     text-align: center;
+    width: 100%;
     padding-bottom: 60px;
+    padding-top: 40px;
 }
+
+#divreview {}
 
 #reviews h2 {
     color: rgb(0, 0, 0);
-    font-size: 50px;
+    font-size: 6.925207756232687vh;
+    margin-bottom: -20px;
 }
 
 
 /* CONTACT */
 
 #contact {
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 60px;
     margin-bottom: 100px;
 }
 
 #contact h2 {
     text-align: center;
-    font-size: 50px;
-}
-
-
-/* Map */
-
-#map {
-    margin: auto;
-    display: flex;
-    justify-content: center;
-}
-
-
-/* footer */
-
-.footer {
-    padding: 30px;
+    font-size: 6.925207756232687vh;
 }
 
 .float-container {
     border: 3px solid #fff;
-    padding: 20px;
-    max-width: 1000px;
+    max-width: 100%;
+    padding-left: 15%;
+    padding-right: 15%;
     margin: auto;
 }
 
@@ -363,4 +393,28 @@
 .float-child2 table {
     margin-left: auto;
     margin-right: auto;
+}
+
+
+/* Map */
+
+#map {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+
+/* footer */
+
+.footer {
+    padding: 30px;
+}
+
+footer {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(1, 71, 141);
+    text-align: center;
+    color: #ffffff;
 }
