--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,37 +1,92 @@
-@media (max-width: 360px) {
-    .float-child {
-        width: 100%;
+    @media (max-width: 360px) {
+        .float-child {
+            width: 100%;
+        }
+        .float-child1 {
+            width: 100%;
+        }
+        .float-child2 {
+            width: 100%;
+        }
+        .footer {
+            width: 100%;
+        }
+        body {}
     }
-    .float-child1 {
-        width: 100%;
+    
+    @media (max-width: 1000px) {
+        .float-child {
+            width: 100%;
+        }
+        .float-child1 {
+            width: 100%;
+        }
+        .float-address {
+            align-content: center;
+            width: 100%;
+        }
+        .float-child2 {
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .footer {
+            width: 100%;
+        }
+        body {}
+        #insurance img {
+            width: 100%;
+            height: auto;
+        }
+        #vid {
+            width: 100%;
+            float: left;
+        }
+        .grid-container {
+            justify-content: center;
+            display: grid;
+            grid-template-columns: 21vh 21vh;
+        }
+        .hero-image {
+            width: 100%;
+            height: 50%;
+        }
+        .slogan2 {
+            padding: 10px;
+        }
+        #myBtn {
+            font-size: 10px;
+            margin-right: -20px;
+            margin-bottom: -10px;
+        }
+        #btn {
+            margin-top: 4vh;
+            margin-bottom: 4vh;
+        }
+        #about img {
+            width: 100%;
+            float: none;
+            margin-top: 0%;
+            margin-right: 0%;
+            margin-bottom: 0%;
+        }
+        #about {
+            width: 100%;
+        }
+        #about p {
+            font-size: 2vh;
+        }
+        #about div {
+            margin-bottom: -100px;
+        }
+        #main {
+            margin-bottom: 80vh;
+        }
+        .slogan1 {
+            font-size: 4vh;
+        }
+        .slogan2 {
+            margin-top: -2vh;
+            font-size: 2vh;
+        }
     }
-    .float-child2 {
-        width: 100%;
-    }
-    .footer {
-        width: 100%;
-    }
-    body {}
-}
-
-@media (max-width: 1000px) {
-    .float-child {
-        width: 100%;
-    }
-    .float-child1 {
-        width: 100%;
-    }
-    .float-address {
-        align-content: center;
-        width: 100%;
-    }
-    .float-child2 {
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .footer {
-        width: 100%;
-    }
-    body {}
-}
