--- a/css/style2.css
+++ b/css/style2.css
@@ -371,7 +371,8 @@
 .float-child1 {
     width: 50%;
     float: left;
-    padding: 20px;
+    margin-top: -30px;
+    margin-bottom: -20px;
     border: 2px solid rgb(255, 255, 255);
     text-align: center;
 }
@@ -397,6 +398,10 @@
     margin: auto;
     display: flex;
     justify-content: center;
+}
+
+.time {
+    font-size: 15px;
 }
 
 
