--- a/css/style2.css
+++ b/css/style2.css
@@ -2,7 +2,7 @@
 
 .hero-image {
     background-image: linear-gradient(rgba(255, 255, 255, 0.068), rgba(0, 0, 0, 0.151)), url("../imgs/bg.jpg");
-    height: 100%;
+    height: 150%;
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -51,7 +51,7 @@
 }
 
 #main {
-    margin-bottom: 800px;
+    margin-bottom: 97vh;
 }
 
 
