--- a/css/style2.css
+++ b/css/style2.css
@@ -129,6 +129,7 @@
 /* BRANDS */
 
 #brands {
+    margin-top: 125px;
     background-image: url(../imgs/bgbg2.png);
     height: 150%;
     width: 100%;
