--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!--  <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>-->
-                <a class="navbar-brand page-scroll" href="#page-top">
+                <a class="navbar-brand page-scroll" href="#page-top" style="font-size: 50px; text-shadow: 0px 0px 5px #000000;
+                ">
 MAY OPTICAL
                     </img>
 
