--- a/_includes/css/mobile.css
+++ b/_includes/css/mobile.css
@@ -1,5 +1,11 @@
-        @media only screen and (max-width: 360px) and (max-height: 640px) {}
-        
-        @media only screen and (max-width: 360px) and (max-height: 640px) {}
-        
-        @media only screen and (min-width: 320px) {}
+@media only screen and (min-width: 991px) and (max-width: 1500px) {
+    #page-scroll {
+        font-size: 11px;
+    }
+}
+
+@media only screen and (min-width: 641px) and (max-width: 990px) {}
+
+@media only screen and (max-width: 360px) and (max-height: 640px) {}
+
+@media only screen and (min-width: 320px) {}
