--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
+    <div class="container header">
         <div class="row" style="display: flex; justify-content: center; align-items: center;">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
