--- a/_includes/css/mobile.css
+++ b/_includes/css/mobile.css
@@ -1,6 +1,7 @@
 @media only screen and (min-width: 991px) and (max-width: 1500px) {
     #page-scroll {
         font-size: 11px;
+        #page-top>nav>div
     }
 }
 
