--- a/_includes/css/mobile.css
+++ b/_includes/css/mobile.css
@@ -2,7 +2,7 @@
     #page-scroll {
         font-size: 11px;
     }
-    #container header {
+    .container header {
         width: auto;
     }
 }
