--- a/_includes/header.html
+++ b/_includes/header.html
@@ -71,7 +71,7 @@ MAY OPTICAL
             <!-- <div style="color: rgb(0, 0, 0);" class="intro-lead-in">Check out our online store</div>
 -->
 
-            <a href="https://shop.mayoptical.com/" target="_blank" style="border-color: black; color: black; background-color: white;" class="page-scroll btn btn-xl">Shop</a>
+            <a href="https://shop.mayoptical.com/" style="border-color: black; color: black; background-color: white;" class="page-scroll btn btn-xl">Shop</a>
         </div>
     </div>
 </header>
