--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
                     </div>
 
                     <div class="col-xs-7 col-format-img revealR">
-                        <img src="img/photos/20220504_MayOptical_website-7.jpg" style="width: 100%; height: 100%;" />
+                        <img class="img-mobile" src="img/photos/20220504_MayOptical_website-7.jpg" style="width: 100%; height: 100%;" />
                     </div>
 
                 </div>
@@ -27,7 +27,7 @@
                 <div class="row" style="border:none; ">
 
                     <div class="col-xs-7 col-format-img revealL">
-                        <img src="img/photos/20220504_MayOptical_website-21.jpg" style="width: 100%; height: 100%;" />
+                        <img class="img-mobile" src="img/photos/20220504_MayOptical_website-21.jpg" style="width: 100%; height: 100%;" />
                     </div>
 
                     <div class="col-xs-5 col-format-text revealR">
