--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
             <div class="col-lg-12">
                 <div class="row" style="border:none;">
 
-                    <div class="col-xs-5 col-format-text revealL">
+                    <div class="col-xs-5 col-format-text revealL about-mobile">
                         <h2 class="section-heading heading ">About Us</h2>
 
                         <p class="paragraphs">Established in 1985 by Paul Lau, May Optical was founded with the goal of helping its community see better - from our original downtown location to our current Scarborough store, where we have been since 2005. Ever the family oriented
