--- a/_includes/css/mobile.css
+++ b/_includes/css/mobile.css
@@ -9,7 +9,7 @@
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
     .about-mobile {
-        width: 100%;
+        width: 100% !important;
     }
     .col-format-img {
         height: 60vh;
