--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
             <div class="col-lg-12">
                 <div class="row" style="border:none;">
 
-                    <div class="col-xs-5 col-format-text revealL about-mobile">
+                    <div class="col-xs-5 col-format-text revealL mobile">
                         <h2 class="section-heading heading ">About Us</h2>
 
                         <p class="paragraphs">Established in 1985 by Paul Lau, May Optical was founded with the goal of helping its community see better - from our original downtown location to our current Scarborough store, where we have been since 2005. Ever the family oriented
@@ -16,7 +16,7 @@
 
                     </div>
 
-                    <div class="col-xs-7 col-format-img revealR">
+                    <div class="col-xs-7 col-format-img revealR mobile">
                         <img class="img-mobile" src="img/photos/20220504_MayOptical_website-7.jpg" style="width: 100%; height: 100%;" />
                     </div>
 
@@ -26,11 +26,11 @@
             <div class="col-lg-12">
                 <div class="row" style="border:none; ">
 
-                    <div class="col-xs-7 col-format-img revealL">
+                    <div class="col-xs-7 col-format-img revealL mobile">
                         <img class="img-mobile" src="img/photos/20220504_MayOptical_website-21.jpg" style="width: 100%; height: 100%;" />
                     </div>
 
-                    <div class="col-xs-5 col-format-text revealR">
+                    <div class="col-xs-5 col-format-text revealR mobile">
 
                         <h2 class="section-heading heading">Our Mission</h2>
                         <p class="paragraphs">
