--- a/_includes/collection.html
+++ b/_includes/collection.html
@@ -5,7 +5,7 @@
             <div class="col-lg-12">
                 <div class="row" style="border:none; ">
 
-                    <div class="col-xs-5 col-format-text revealL">
+                    <div class="col-xs-5 col-format-text revealL mobile">
                         <h2 class="section-heading heading">Our Collection</h2>
                         <p class="paragraphs">
                             Our brands are specially curated and each frame is chosen with the needs of our clientele in mind. Not all of our collections are featured in our online shop, we encourage you to come visit us!
@@ -45,7 +45,7 @@
                         </p>
                     </div>
 
-                    <div class="col-xs-7 col-format-img revealR">
+                    <div class="col-xs-7 col-format-img revealR mobile collection-img">
                         <img src="img/photos2/3.jpeg" style="width: 100%; height: 100%;" />
                     </div>
 
