--- a/_includes/insurance.html
+++ b/_includes/insurance.html
@@ -8,11 +8,11 @@
             <div class="col-lg-12 ">
                 <div class="row" style="border:none; background:white; height:210px; ">
 
-                    <div class="col-xs-7 col-format-img revealL">
+                    <div class="col-xs-7 col-format-img revealL mobile">
                         <img src="img/photos/20220504_MayOptical_website-5.jpg" style="width: 100%; height: 100%;" />
                     </div>
 
-                    <div class="col-xs-5 col-format-text revealR">
+                    <div class="col-xs-5 col-format-text revealR mobile">
 
                         <h2 class="section-heading heading">Insurance Partners</h2>
                         <p class="paragraphs">
