--- a/_includes/services.html
+++ b/_includes/services.html
@@ -8,8 +8,8 @@
                 <h3 class="section-subheading text-muted"> </h3>
             </div>
         </div>
-        <div class="row text-center">
-            <div class="col-md-4">
+        <div class="row text-center services-mobile">
+            <div class="col-md-4 services-text">
                 <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-fourth"></i>
                         <i class="fa fa-glasses fa-stack-1x fa-inverse"></i>
@@ -17,7 +17,7 @@
                 <h4 class="service-heading">EYEWEAR</h4>
                 <p class="text-muted">With hundreds of frames in store, we have the perfect pair for you - prescription eyeglasses, sunglasses (rx and non rx), safety, swimming and sports. </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 services-text">
                 <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-fourth"></i>
                         <i class="fa fa-eye fa-stack-1x fa-inverse"></i>
@@ -26,7 +26,7 @@
                 <p class="text-muted">We carry all major brands of contact lenses and provide fitting and instruction on insertion, removal and care of contacts.
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 services-text">
                 <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-fourth"></i>
                         <i class="fa fa-screwdriver-wrench fa-stack-1x fa-inverse"></i>
