--- a/_includes/insurance.html
+++ b/_includes/insurance.html
@@ -8,7 +8,7 @@
             <div class="col-lg-12 ">
                 <div class="row" style="border:none; background:white; height:210px; ">
 
-                    <div class="col-xs-7 col-format-img revealL mobile">
+                    <div class="col-xs-7 col-format-img revealL mobile insurance-img">
                         <img src="img/photos/20220504_MayOptical_website-5.jpg" style="width: 100%; height: 100%;" />
                     </div>
 
