--- a/_includes/css/kalvin.css
+++ b/_includes/css/kalvin.css
@@ -3,7 +3,7 @@ html {
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 #myBtn {
