--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -67,9 +67,9 @@
                 </table>
             </div>
         </div>
-        <div class="row text-center" style="color:white; margin-top: 40px; ">Please note:<br> Our hours may be subject to change at any time. We are closed for all statutory holidays.</div>
-        <div class="row text-center" style="color:white; margin-top: 40px; ">Public Transit:<br>From Finch Station: Any 53 Steeles East bus, exit at Silver Star Blvd. and Steeles Ave. East <br>From Kennedy Station: 57 Midland bus, exit at 633 Silver Star Blvd. or at Silver Star Blvd at Steeles Ave. East. </div>
-        <div class="row text-center" style="color:white; margin-top: 40px; ">Parking:<br>There is ample free parking in front of the store
+        <div class="row text-center contact-text-mobile" style="color:white; margin-top: 40px; ">Please note:<br> Our hours may be subject to change at any time. We are closed for all statutory holidays.</div>
+        <div class="row text-center contact-text-mobile" style="color:white; margin-top: 40px; ">Public Transit:<br>From Finch Station: Any 53 Steeles East bus, exit at Silver Star Blvd. and Steeles Ave. East <br>From Kennedy Station: 57 Midland bus, exit at 633 Silver Star Blvd. or at Silver Star Blvd at Steeles Ave. East. </div>
+        <div class="row text-center contact-text-mobile" style="color:white; margin-top: 40px; ">Parking:<br>There is ample free parking in front of the store
         </div>
 
     </div>
