--- a/_includes/css/kalvin.css
+++ b/_includes/css/kalvin.css
@@ -183,7 +183,8 @@ html {
 }
 
 .heading {
-    margin-bottom: 5vh !important;
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
 }
 
 #about {
