--- a/_includes/css/mobile.css
+++ b/_includes/css/mobile.css
@@ -5,9 +5,14 @@
         .container {
             width: auto !important;
         }
+        .nav>li>a {
+            padding-left: 8px !important;
+            padding-right: 8px !important;
+            font-size: 12px;
+        }
     }
     
-    @media only screen and (min-width: 321px) and (max-width: 999px) {
+    @media only screen and (min-width: 321px) and (max-width: 767px) {
         .section-heading.heading {
             margin-top: 40px !important;
             margin-bottom: 40px !important;
@@ -268,7 +273,7 @@
         }
     }
     
-    @media only screen and (min-width: 319px) and (max-height: 569px) {
+    @media only screen and (min-width: 1px) and (max-height: 569px) {
         .section-heading.heading {
             margin-top: 40px !important;
             margin-bottom: 40px !important;
@@ -300,8 +305,13 @@
         .page-scroll {
             text-align: center;
         }
+        #page-top>nav>div>div:nth-child(2) {
+            margin-left: 50px !important;
+            margin-right: 50px !important;
+        }
         .nav>li>a {
-            padding: 10px 50px !important;
+            padding-left: 15px !important;
+            padding-right: 15px !important;
         }
         .navbar-default .navbar-toggle:hover,
         .navbar-default .navbar-toggle:focus {
