--- a/_includes/css/kalvin.css
+++ b/_includes/css/kalvin.css
@@ -31,7 +31,7 @@ html {
 }
 
 #myBtn:hover {
-    background-color: rgb(0, 0, 0);
+    text-decoration: underline;
 }
 
 .collection-brand-gallery {
