--- a/_includes/css/kalvin.css
+++ b/_includes/css/kalvin.css
@@ -9,6 +9,7 @@ html {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     text-decoration: underline;
+    color: #ffffff;
 }
 
 #myBtn {
