--- a/_includes/css/mobile.css
+++ b/_includes/css/mobile.css
@@ -4,7 +4,7 @@
         }
 
         .container {
-            width: auto !important;
+            width: 100% !important;
         }
 
         .nav>li>a {
